appId: com.pontistudios.mindsherpa.dev
---
- runFlow: ../auth/login_e2e_bypass.yaml
- tapOn: "FOCUS"
- waitForAnimationToEnd
- swipe:
    direction: RIGHT
    element:
      id: focus-item-0
    duration: 150
- swipe:
    direction: RIGHT
    element:
      id: focus-item-0
    duration: 150
- waitForAnimationToEnd
