appId: com.pontistudios.mindsherpa.dev
---
- runFlow: ../auth/login_e2e_bypass.yaml
- tapOn: "FOCUS"
- waitForAnimationToEnd
- tapOn:
    id: voice-start-button
- waitForAnimationToEnd
- tapOn:
    id: voice-stop-button
- waitForAnimationToEnd
